<?xml version="1.0"?>
<package format="3">
  <name>cf_msgs</name>
  <version>0.0.0</version>
  <description>The cf_msgs package</description>

  <maintainer email="kailai.li@rug.nl">Kailai Li</maintainer>
  <maintainer email="ziyu.cao@liu.se">Ziyu Cao</maintainer>
  <author email="kailai.li@rug.nl">Kailai Li</author>
  <author email="ziyu.cao@liu.se">Ziyu Cao</author>  
  <license>GPLv3</license>
  
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
